# orthos

./: .pre-commit-config.yaml  ARCHITECTURE.md  CODING_STANDARD.md  CONSOLIDATION_IMPROVEMENTS_SUMMARY.md  CONTRIBUTING.md  GAIA_MATHEMATICAL_METHODS_DEEP_DIVE_EN.md  GUIDES.md  MANIFEST.in  META_LEARNING_HYBRID_IMPLEMENTATION_PLAN.md  MIGRATION_GAIA_TO_ORTHOS.md  ORTHOS_MATHEMATICAL_METHODS_DEEP_DIVE_EN.md  README.md  RELEASE_NOTES.md  ROADMAP.md  SCIENCE.md  benchmark.py  dev-requirements.txt  pyproject.toml  requirements.txt  run_gaia_v42.py  run_orthos_v42.py  setup.py  test_cayley_layer.py  test_orthos.py  verify_critical_fixes.py  verify_orthos_fixes.py  verify_orthos_v51.py
.agent/: instructions.md
.agent/docs/: README.md  development-guide.md  knowledge-base.md  system-architecture.md
.agent/workflows/: add-layer.md  fix-test.md
docs/architecture/: bayesian_optimizations_v42.md  consolidation_improvements_v42.md
docs/guides/: gpu-usage.md
docs/research/: TEST_PLAN_UTILITY.md
gaia/: __init__.py
gaia/config/: defaults.py
gaia/consensus/: engine.py
gaia/core/: __init__.py  exceptions.py  gpu_utils.py  tensor.py
gaia/examples/: gpu_benchmark.py
gaia/filters/: kalman.py  particle.py
gaia/hierarchy/: consensus_manager.py  filtered_level.py
gaia/layers/: __init__.py  attention.py  hebbian.py  reactive.py  temporal.py
gaia/meta_learning/: metrics.py  optimizer.py
gaia/plasticity/: __init__.py  es_optimizer.py  structural.py
orthos/: __init__.py
orthos/config/: __init__.py  defaults.py
tests/: research_utility_benchmark.py
(+49 files in other folders)
