[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orthos-framework"
version = "5.0.0"
description = "Orthogonal Recursive Hierarchical Optimization System"
readme = "README.md"
authors = [
  { name = "ORTHOS Development Team", email = "dev@orthos.ai" },
]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["neuroscience", "kalman-filter", "hierarchical-learning", "active-inference", "orthogonal-processing"]
dependencies = [
    "numpy>=1.20.0",
    "matplotlib>=3.4.0",
    "scipy>=1.7.0",
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "black>=21.0",
    "flake8>=3.9.0",
    "isort>=5.0.0",
    "mypy>=0.900",
]
torch = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
]

[project.urls]
"Homepage" = "https://github.com/kelaci/orthos"
"Bug Tracker" = "https://github.com/kelaci/orthos/issues"

[tool.setuptools]
packages = ["orthos"]

